...
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="create_profile_name">Enter Name</string>
  <string name="core_navigation_home">Home</string>
  <string name="core_navigation_activity">Activity</string>
  <string name="core_navigation_plan">Plan</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="drawer_menu_edit_profile">Edit Profile</string>
  <string name="drawer_menu_edit_treatment_plan">Edit Treatment Plan</string>
  <string name="drawer_menu_view_classification">View Classification</string>
  <string name="drawer_menu_retake_questionnaire">Retake Questionnaire</string>
...
